--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,51 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        app:gdtv_strokeWidth="3dp"
+        app:gdtv_cornerRadius="25dp"
+        app:gdtv_solidColor="#66ccff"
         app:gdtv_strokeColor="#323232"
         app:gdtv_strokeDashWidth="10dp"
-        app:gdtv_cornerRadius="25dp"
-        app:gdtv_solidColor="#66ccff" />
+        app:gdtv_strokeWidth="3dp" />
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <com.example.bovink.commonutil.view.GradientLinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            app:gdll_cornerBottomLeftRadius="20dp"
+            app:gdll_cornerBottomRightRadius="0dp"
+            app:gdll_cornerTopLeftRadius="20dp"
+            app:gdll_cornerTopRightRadius="0dp"
+            app:gdll_strokeColor="#232326"
+            app:gdll_strokeWidth="1dp"
+            app:gdll_solidColor="#66ccff">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="我的订单" />
+        </com.example.bovink.commonutil.view.GradientLinearLayout>
+
+        <com.example.bovink.commonutil.view.GradientLinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            app:gdll_cornerBottomLeftRadius="0dp"
+            app:gdll_cornerBottomRightRadius="20dp"
+            app:gdll_cornerTopLeftRadius="0dp"
+            app:gdll_cornerTopRightRadius="20dp"
+            app:gdll_strokeColor="#232326"
+            app:gdll_strokeWidth="1dp"
+            app:gdll_solidColor="#f27c14">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="我的订单" />
+        </com.example.bovink.commonutil.view.GradientLinearLayout>
+    </LinearLayout>
 </FrameLayout>
