--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
         </com.example.bovink.commonutil.view.GradientLinearLayout>
 
         <com.example.bovink.commonutil.view.GradientLinearLayout
+            android:id="@+id/gll_myorder"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             app:gdll_cornerBottomLeftRadius="0dp"
